Fix the game panel button flickering issue

--- a/app/javascript/stylesheets/home/room.scss
+++ b/app/javascript/stylesheets/home/room.scss
@@ -61,22 +61,3 @@
 .is-half-height {
   height: 49%;
 }
-.change-game-button {
-  margin: 1em 0;
-  opacity: 0;
-  animation: fadeInFromNone 2s ease-out 5s forwards;
-}
-
-@keyframes fadeInFromNone {
-  0% {
-    opacity: 0;
-  }
-
-  1% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
